--- a/style.css
+++ b/style.css
@@ -133,8 +133,10 @@ main {
   width: 100%;
   resize: none;
   font-size: 16px;
-  line-height: 1.8;
-  padding: 8px;
+  line-height: 1.6;
+  padding: 12px 8px 8px 8px;
+  box-sizing: border-box;
+  vertical-align: top;
 }
 
 #charCount {
