--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ main {
 }
 
 .timeline-controls button:hover {
-    background: #666;
+    background: #465b95;
 }
 
 /* ==============================
